--- a/build.gradle
+++ b/build.gradle
@@ -17,13 +17,20 @@ buildscript {
 
 apply plugin: 'forge'
 
-version = "1.7.2-1.0"
+version = "1.8-1.0"
 group= "com.jackhamma07.helloworld" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = "HelloWorld"
 
 minecraft {
-    version = "1.7.2-10.12.2.1147"
-    assetDir = "eclipse/assets"
+    version = "1.8-11.14.1.1329"
+    runDir = "eclipse"
+
+    // the mappings can be changed at any time, and must be in the following format.
+    // snapshot_YYYYMMDD   snapshot are built nightly.
+    // stable_#            stables are built at the discretion of the MCP team.
+    // Use non-default mappings at your own risk. they may not allways work.
+    // simply re-run your setup task after changing the mappings to update your workspace.
+    mappings = "snapshot_20141130"    
 }
 
 dependencies {
